# bga

./: .gitignore  README.md  flake.nix  pyproject.toml
bga_match_maker/: bga_account.py  bga_create_game.py  bga_game_list.py  cache_to_file.py  main.py
src/: bga_account.py  bga_create_game.py  bga_table_status.py  main.py
