[tool.poetry]
name = "bga"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
